# philologus-fulltext

./: Cargo.toml  README.md  build-iOS.sh
src/: lib.rs
