[package]
name = "philologus-fulltext"
version = "0.1.0"
edition = "2024"

[lib]
name = "philologus_fulltext"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[dependencies]
tantivy = "0.25.0" #0.21.1
uniffi = { version = "0.31.0", features = ["cli"] }
polytonic-greek = { git = "https://github.com/jeremymarch/polytonic-greek", version = "0.5.1" }

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }
